Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,8 @@
 \usepackage[letterpaper]{geometry}
 \usepackage{times}
 \geometry{top=1.0in, bottom=1.0in, left=1.0in, right=1.0in}
-
+\newcommand{\IR}{Industrial Revolution}
+\newcommand{\EC}{Ecological Crisis}
 %
 %Doublespacing
 %
@@ -26,6 +27,7 @@
 \pagestyle{fancy}
 \lhead{} 
 \chead{} 
+\lhead{\LaTeX}
 \rhead{Guo \thepage} 
 \lfoot{} 
 \cfoot{} 
@@ -36,7 +38,7 @@
 %12pt is one-sixth of an inch. Subtract this from 0.5in to get headsep value
 \setlength\headsep{0.333in}
 
-%
+
 %Works cited the environment
 %(to start, use \begin{workscited...}, each entry preceded by \bibent)
 % - from Ryan Alcock's MLA style file
@@ -73,9 +75,17 @@ The Root Problem of The Ecological Crisis
 % human is the real probblem
 % xkoukunfaruanxkoukunfadou alexhcuquouculai chouwei  xtiaoshouzhikunaliangcafine chaojikunkunsuankunhuiyi skaole shouruanxkoukunxiangqilaieldanao
 % Cap zi ben jia s zhe yi guo cheng xtiao kunxkouzangkunxtiarukukk xkojiaaunn  rende guan dian shi ren de guandian   zhineng neng zibenjiejuejiaosaunnshouzhang leng 
-In Moore's article, he disscussed the cause of current ecologtical crisis (EC). He argued that the current EC is created by the the capitalism, not human. He states that the Anthropocene’s view point is that the EC is caused by human as a whole since Industrial Revolution, and human, including capitalism, is not part of the nature. On the other hand, the Capitalocene's argument is that  
-Although I agree with the fact that EC aggravated after the present of captalism (Industrial Revolution, per Moore's paper), I do not accept his underriding assumption about the underline cause of the surface phenomenons and problems, i.e. human.
+In Moore's article, he disscussed the cause of current ecologtical crisis (\EC). He argued that the current \EC is created by the the capitalism, not human. He states that the Anthropocene’s view point is that the \EC is caused by human as a whole since Industrial Revolution, and human, including capitalism, is not part of the nature. On the other hand, his argument (i.e. Capitalocene) is that political issues but not technology is the problem, and the fact that capitalism treat natural as cheap resources created the \EC. (Tang) (Moore)
+Although I agree with the fact that \EC aggravated after the present of captalism and it is contributed by political issues and decisions, I do not accept his underriding assumption about the underline cause of the surface phenomenons and problems, i.e. human and the society of it.
 
+Caplitilism did enchance \EC, we can see this 
+The innate character of caplitilism 
+% I disagree his argument about
+However, before the existing of moderm caplitilism, the effect of human to the envirement already began. Its limited of harm is not due to the lack of moderm caplitilism or moderm economic system, but the lake of tools. Like almost all species, \textit{Homo sapiens} is greedy: form bare survival at the early ages to advvanced livelihood in moderm sociaty. Thus, the interaction, which is mostly negative to the environment, between \textit{Homo sapiens} and nature began in their existence: through out the history of humans, as a form of exploitation. The forms of exploition from human varies between types of civilizations. Farming civilization uses the land, which could be deforested, and labour forces from animals. Nomadic civilization is also obvious "use" of nature. That is, human has been creating negative impact to the natural. Before \IR, however, the equlibium in many places are not broken yet, and thus the \EC did not appear. 
+distinguish bwteen them is not .....
+\\
+
+Cap did, but human
 \newpage
 
 
@@ -84,6 +94,8 @@ Although I agree with the fact that EC aggravated after the present of captalism
 
 \bibent Moore, J. W. The Capitalocene, Part I: On the Nature and Origins of Our Ecological Crisis. The Journal of Peasant Studies 2017, 44 (3), 594–630. https://doi.org/10.1080/03066150.2016.1235036.
 
+\bibent 
+ Tang, “Jason W. Moore's Visit to Taiwan: Anthropocene or Capital World?,” Medium, May 24, 2019.  [Online]. Available: https://tgc0927.medium.com/6b9afe8336fd. [Accessed: Feb. 18, 2023]
 
 
 
