Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -27,7 +27,7 @@
 \pagestyle{fancy}
 \lhead{} 
 \chead{} 
-\lhead{\LaTeX}
+% \lhead{\LaTeX}
 \rhead{Guo \thepage} 
 \lfoot{} 
 \cfoot{} 
@@ -78,11 +78,13 @@ The Root Problem of The Ecological Crisis
 In Moore's article, he disscussed the cause of current ecologtical crisis (\EC). He argued that the current \EC is created by the the capitalism, not human. He states that the Anthropocene’s view point is that the \EC is caused by human as a whole since Industrial Revolution, and human, including capitalism, is not part of the nature. On the other hand, his argument (i.e. Capitalocene) is that political issues but not technology is the problem, and the fact that capitalism treat natural as cheap resources created the \EC. (Tang) (Moore)
 Although I agree with the fact that \EC aggravated after the present of captalism and it is contributed by political issues and decisions, I do not accept his underriding assumption about the underline cause of the surface phenomenons and problems, i.e. human and the society of it.
 
-Caplitilism did enchance \EC, we can see this 
-The innate character of caplitilism 
+Modern caplitilism did enchance \EC, this is very obeavous in the history. I also agree with his view point that political decisions involved in the history of development. (Tang) (Moore). However, I do not think this is the only thing that made the history, i.e. the cardinality of the vector set involved in history decision is larger than what Moore described in his article. There are two decision processes. First, we can imagine the history is in metric-not-complete space, which satisfies nonnegativity (two points in the history cannot be negative distanced), symmetry (the distance in history from point $a$ to $b$ is same as from $b$ to $a$).
+The history development process could be seen as the results of virtual forces, which are different components in decision tree, including the policy (caplitilism decisions) and technology (human capability). The direction and magnitude of the process is the resultant of the vectors in such moment. The smaller the angle between the policy and technology, the faster the move is. In the begining of \IR, this is the case. however, 
+% $$F_{history}(cor)=\sqrt{\sum_{i\in F(cor)}i^2}$$
+
+The innate character of caplitilism.
 % I disagree his argument about
-However, before the existing of moderm caplitilism, the effect of human to the envirement already began. Its limited of harm is not due to the lack of moderm caplitilism or moderm economic system, but the lake of tools. Like almost all species, \textit{Homo sapiens} is greedy: form bare survival at the early ages to advvanced livelihood in moderm sociaty. Thus, the interaction, which is mostly negative to the environment, between \textit{Homo sapiens} and nature began in their existence: through out the history of humans, as a form of exploitation. The forms of exploition from human varies between types of civilizations. Farming civilization uses the land, which could be deforested, and labour forces from animals. Nomadic civilization is also obvious "use" of nature. That is, human has been creating negative impact to the natural. Before \IR, however, the equlibium in many places are not broken yet, and thus the \EC did not appear. 
-distinguish bwteen them is not .....
+However, before the existing of moderm caplitilism, the effect of human to the envirement already began. Its limited of harm is not due to the lack of moderm caplitilism or moderm economic system, but the lake of tools. Like almost all species, \textit{Homo sapiens} is greedy: form bare survival at the early ages to advvanced livelihood in moderm sociaty. Thus, the interaction, which is mostly negative to the environment, between \textit{Homo sapiens} and nature began in their existence: through out the history of humans, as a form of exploitation. The forms of exploition from human varies between types of civilizations. Farming civilization uses the land, which could be deforested, and labour forces from animals. Nomadic civilization is also obvious "use" of nature. That is, human has been creating negative impact to the natural. Before \IR, however, the equlibium in many places are not broken yet, and thus the \EC did not appear. In another word, the current \EC is a problem of \textit{Homo sapiens}, and the captial amplifies this effect. Thus, it is important to distinguish bwteen the Farming-Livestock Civilization Capitalism and modern capitalism.
 \\
 
 Cap did, but human
@@ -92,12 +94,14 @@ Cap did, but human
 
 \begin{workscited}
 
-\bibent Moore, J. W. The Capitalocene, Part I: On the Nature and Origins of Our Ecological Crisis. The Journal of Peasant Studies 2017, 44 (3), 594–630. https://doi.org/10.1080/03066150.2016.1235036.
+\bibent Moore, J. W. The Capitalocene, Part I: On the Nature and Origins of Our Ecological Crisis. The Journal of Peasant Studies 2017, 44 (3), 594–630. doi: 10.1080-03066150.2016.1235036.
 
 \bibent 
- Tang, “Jason W. Moore's Visit to Taiwan: Anthropocene or Capital World?,” Medium, May 24, 2019.  [Online]. Available: https://tgc0927.medium.com/6b9afe8336fd. [Accessed: Feb. 18, 2023]
+ Tang, “Jason W. Moore's Visit to Taiwan: Anthropocene or Capitalocene?,” Medium, May 24, 2019.  [Online]. Available: https://tgc0927.medium.com/6b9afe8336fd. [Accessed: Feb. 18, 2023]
 
-
+% \bibent 
+% J. Uhlmann, W. Guo “The Application of Metric Search On Dating
+% Matching Algorithm.” 2023. Student paper.
 
 
 \end{workscited}
