Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -78,8 +78,11 @@ The Root Problem of The Ecological Crisis
 In Moore's article, he disscussed the cause of current ecologtical crisis (\EC). He argued that the current \EC is created by the the capitalism, not human. He states that the Anthropocene’s view point is that the \EC is caused by human as a whole since Industrial Revolution, and human, including capitalism, is not part of the nature. On the other hand, his argument (i.e. Capitalocene) is that political issues but not technology is the problem, and the fact that capitalism treat natural as cheap resources created the \EC. (Tang) (Moore)
 Although I agree with the fact that \EC aggravated after the present of captalism and it is contributed by political issues and decisions, I do not accept his underriding assumption about the underline cause of the surface phenomenons and problems, i.e. human and the society of it.
 
-Modern caplitilism did enchance \EC, this is very obeavous in the history. I also agree with his view point that political decisions involved in the history of development. (Tang) (Moore). However, I do not think this is the only thing that made the history, i.e. the cardinality of the vector set involved in history decision is larger than what Moore described in his article. There are two decision processes. First, we can imagine the history is in metric-not-complete space, which satisfies nonnegativity (two points in the history cannot be negative distanced), symmetry (the distance in history from point $a$ to $b$ is same as from $b$ to $a$).
-The history development process could be seen as the results of virtual forces, which are different components in decision tree, including the policy (caplitilism decisions) and technology (human capability). The direction and magnitude of the process is the resultant of the vectors in such moment. The smaller the angle between the policy and technology, the faster the move is. In the begining of \IR, this is the case. however, 
+Modern caplitilism did enchance \EC, this is very obeavous in the history. I also agree with his view point that political decisions involved in the history of development. (Tang) (Moore). However, I do not think this is the only thing that made the history, i.e. the cardinality of the vector set involved in history decision is larger than what Moore described in his article. There are two decision processes. First, we can imagine the history is in non-complete metric space, which satisfies nonnegativity (two points in the history cannot be negative distanced) and symmetry (the distance in history from point $a$ to $b$ is same as from $b$ to $a$).
+The history development process could be seen as the results of virtual forces, which are different components in decision tree, including the policy (caplitilism decisions) and technology (human capability). The direction and magnitude of the process is the resultant of the vectors in such moment. The smaller the angle between the policy and technology, the faster the move is. In the begining of \IR, this is the case. However, this is not the cae anymore. A thing to notice is that if we imagine the history space with other dimisions as the social welfare in different groups of people of the moment, the captical decision will most likely be the scalar multiplication of the gradient of the welfare dimension that has the greatest projection of the capital welfare vector. That is, the captical will chose the dicision that is best for them and only them at the shorest time frame, which alien with Moore's argument However, he underlooked the force of human.
+% In the histroy, the weights of captical and human changes during the development process. 
+The captical vector at the moment might point to the direction that is only Benfitical for themselves in short term (BFTIS), the human/technology pointer is indenpent of this. The second way to model the history process is that political (caplitilism) points the direction, but technology (human) created the path. Without the path created by human, captical could have two solutions: creat the technology (means) or choose another way. From this model, we can observed that the human (technology) is the limited decision components during the hstory.
+
 % $$F_{history}(cor)=\sqrt{\sum_{i\in F(cor)}i^2}$$
 
 The innate character of caplitilism.
