--- a/main.tex
+++ b/main.tex
@@ -57,7 +57,7 @@
 Wenqi Guo\\
 Dr. Ethan Guagliardo\\
 ENGL 112\\
-Feb 18, 2023\\
+Feb 19, 2023\\
 
 %%%%Title
 \begin{center}
@@ -75,13 +75,15 @@ The Root Problem of The Ecological Crisis
 % human is the real probblem
 % xkoukunfaruanxkoukunfadou alexhcuquouculai chouwei  xtiaoshouzhikunaliangcafine chaojikunkunsuankunhuiyi skaole shouruanxkoukunxiangqilaieldanao
 % Cap zi ben jia s zhe yi guo cheng xtiao kunxkouzangkunxtiarukukk xkojiaaunn  rende guan dian shi ren de guandian   zhineng neng zibenjiejuejiaosaunnshouzhang leng 
-In Moore's article, he disscussed the cause of current ecologtical crisis (\EC). He argued that the current \EC is created by the the capitalism, not human. He states that the Anthropocene’s view point is that the \EC is caused by human as a whole since Industrial Revolution, and human, including capitalism, is not part of the nature. On the other hand, his argument (i.e. Capitalocene) is that political issues but not technology is the problem, and the fact that capitalism treat natural as cheap resources created the \EC. (Tang) (Moore)
-Although I agree with the fact that \EC aggravated after the present of captalism and it is contributed by political issues and decisions, I do not accept his underriding assumption about the underline cause of the surface phenomenons and problems, i.e. human and the society of it.
+In Moore's article, he discussed the cause of the current ecological crisis. He argued that the current \EC is created by capitalism, not humans. He states that the Anthropocene's viewpoint is that the \EC has been caused by human as a whole since Industrial Revolution, and human, including capitalism, is not part of nature. On the other hand, his argument (i.e. Capitalocene) is that political issues but not technology are the problems, and the fact that capitalism treats nature as cheap resources created the \EC. (Tang) (Moore)
+Although I agree with the fact that \EC aggravated after the presence of capitalism and it is contributed by political issues and decisions, I do not accept his underlying assumption about the underline cause of the surface phenomenons and problems, i.e. human and the society of it.
 
-Modern caplitilism did enchance \EC, this is very obeavous in the history. I also agree with his view point that political decisions involved in the history of development. (Tang) (Moore). However, I do not think this is the only thing that made the history, i.e. the cardinality of the vector set involved in history decision is larger than what Moore described in his article. There are two decision processes. First, we can imagine the history is in non-complete metric space, which satisfies nonnegativity (two points in the history cannot be negative distanced) and symmetry (the distance in history from point $a$ to $b$ is same as from $b$ to $a$).
-The history development process could be seen as the results of virtual forces, which are different components in decision tree, including the policy (caplitilism decisions) and technology (human capability). The direction and magnitude of the process is the resultant of the vectors in such moment. The smaller the angle between the policy and technology, the faster the move is. In the begining of \IR, this is the case. However, this is not the cae anymore. A thing to notice is that if we imagine the history space with other dimisions as the social welfare in different groups of people of the moment, the captical decision will most likely be the scalar multiplication of the gradient of the welfare dimension that has the greatest projection of the capital welfare vector. That is, the captical will chose the dicision that is best for them and only them at the shorest time frame, which alien with Moore's argument However, he underlooked the force of human.
-% In the histroy, the weights of captical and human changes during the development process. 
-The captical vector at the moment might point to the direction that is only Benfitical for themselves in short term (BFTIS), the human/technology pointer is indenpent of this. The second way to model the history process is that political (caplitilism) points the direction, but technology (human) created the path. Without the path created by human, captical could have two solutions: creat the technology (means) or choose another way. From this model, we can observed that the human (technology) is the limited decision components during the hstory.
+
+Modern capitalism did enhance \EC, this is very obvious in history. I also agree with his viewpoint that political decisions are involved in the history of development. (Tang) (Moore). However, this is not the only thing that made history, i.e. the cardinality of the vector set involved in the historical decision is larger than what Moore described in his article. There are two decision processes. First, we can imagine the history is in non-complete metric space, which satisfies nonnegativity (two points in history cannot be negatively distanced) and symmetry (the distance in history from point $a$ to $b$ is same as from $b$ to $a$).
+The history development process could be seen as the results of virtual forces, which are different components in the decision tree, including the policy (capitalism decisions) and technology (human capability). The direction and magnitude of the process are based on the resultant of the vectors at this moment. The smaller the angle between the policy and technology, the faster the move is; when this angle is small, we can consider the technology contributed to the political decisions, and vice versa: when the angle is large, technology and the political decision limit each other.  At the beginning of \IR, the first situation is the case. However, nowadays, the second situation is more dominant in modern society. A thing to notice is that if we imagine the history space with other dimensions as the welfare in different interest groups of the moment, the capital decision will most likely be the scalar multiplication of the gradient of the welfare dimension with the greatest scalar value of the projection value by the capital interest vector. That is, the capital will choose the best decision for them and only for them in the shortest time frame, which could lead to the local optimum in the metric space with a time dimension, avoiding the global optimum.  
+That aligns with Moore's argument. However, he underlooked the force of humans.
+The human/technology vector is independent of this, and the limitation effect (the second situation is the composition of forces process) of technology could play a significant role and limit the political decision. 
+The second way to model the history process is that politics (capitalism) points the direction, but technology (humans) creates the path. Without the path created by humans, capital could have two solutions: to create the technology (means) needed by the direction or choose another direction, usually the second-best option. From this model, we can observe that the human (technology) is the limiting decision component during history.
 
 % $$F_{history}(cor)=\sqrt{\sum_{i\in F(cor)}i^2}$$
 
@@ -91,6 +93,8 @@ However, before the existing of moderm caplitilism, the effect of human to the e
 \\
 
 Cap did, but human
+
+In conclusion, I do agree with Moore's argument that the capital created the current \EC. However, I cannot accept the fact that he ignored the importance of technology. I furthur argued that his disconnection of human natural and capitalism is not acceptable, as human is always greedy and this is the basic mechanism of capitalism. That is, although capitalism might seem to be the problem, human natural is what made it possible. I then came up with the conclusion that human is the root cause of the current \EC and capitalism immediate cause, as it expose the weakness of human natural.
 \newpage
 
 
@@ -100,11 +104,11 @@ Cap did, but human
 \bibent Moore, J. W. The Capitalocene, Part I: On the Nature and Origins of Our Ecological Crisis. The Journal of Peasant Studies 2017, 44 (3), 594–630. doi: 10.1080-03066150.2016.1235036.
 
 \bibent 
- Tang, “Jason W. Moore's Visit to Taiwan: Anthropocene or Capitalocene?,” Medium, May 24, 2019.  [Online]. Available: https://tgc0927.medium.com/6b9afe8336fd. [Accessed: Feb. 18, 2023]
+ Tang, "Jason W. Moore's Visit to Taiwan: Anthropocene or Capitalocene?," Medium, May 24, 2019. [Online]. Available: https://tgc0927.medium.com/6b9afe8336fd. [Accessed: Feb. 18, 2023]
 
 % \bibent 
-% J. Uhlmann, W. Guo “The Application of Metric Search On Dating
-% Matching Algorithm.” 2023. Student paper.
+% J. Uhlmann, W. Guo "The Application of Metric Search On Dating
+% Matching Algorithm." 2023. Student paper.
 
 
 \end{workscited}
