Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -83,18 +83,18 @@ Modern capitalism did enhance \EC, this is very obvious in history. I also agree
 The history development process could be seen as the results of virtual forces, which are different components in the decision tree, including the policy (capitalism decisions) and technology (human capability). The direction and magnitude of the process are based on the resultant of the vectors at this moment. The smaller the angle between the policy and technology, the faster the move is; when this angle is small, we can consider the technology contributed to the political decisions, and vice versa: when the angle is large, technology and the political decision limit each other.  At the beginning of \IR, the first situation is the case. However, nowadays, the second situation is more dominant in modern society. A thing to notice is that if we imagine the history space with other dimensions as the welfare in different interest groups of the moment, the capital decision will most likely be the scalar multiplication of the gradient of the welfare dimension with the greatest scalar value of the projection value by the capital interest vector. That is, the capital will choose the best decision for them and only for them in the shortest time frame, which could lead to the local optimum in the metric space with a time dimension, avoiding the global optimum.  
 That aligns with Moore's argument. However, he underlooked the force of humans.
 The human/technology vector is independent of this, and the limitation effect (the second situation is the composition of forces process) of technology could play a significant role and limit the political decision. 
+%---------------
 The second way to model the history process is that politics (capitalism) points the direction, but technology (humans) creates the path. Without the path created by humans, capital could have two solutions: to create the technology (means) needed by the direction or choose another direction, usually the second-best option. From this model, we can observe that the human (technology) is the limiting decision component during history.
 
 % $$F_{history}(cor)=\sqrt{\sum_{i\in F(cor)}i^2}$$
-
-The innate character of caplitilism.
-% I disagree his argument about
-However, before the existing of moderm caplitilism, the effect of human to the envirement already began. Its limited of harm is not due to the lack of moderm caplitilism or moderm economic system, but the lake of tools. Like almost all species, \textit{Homo sapiens} is greedy: form bare survival at the early ages to advvanced livelihood in moderm sociaty. Thus, the interaction, which is mostly negative to the environment, between \textit{Homo sapiens} and nature began in their existence: through out the history of humans, as a form of exploitation. The forms of exploition from human varies between types of civilizations. Farming civilization uses the land, which could be deforested, and labour forces from animals. Nomadic civilization is also obvious "use" of nature. That is, human has been creating negative impact to the natural. Before \IR, however, the equlibium in many places are not broken yet, and thus the \EC did not appear. In another word, the current \EC is a problem of \textit{Homo sapiens}, and the captial amplifies this effect. Thus, it is important to distinguish bwteen the Farming-Livestock Civilization Capitalism and modern capitalism.
+His argument also disacknowledges the process toward \EC already began before the  so-called modern capitalism.
+Its limitation of harm is not due to the lack of modern capitalism or modern economic system, but the lack of tools and the population size. 
+Like almost all species, \textit{Homo sapiens} is greedy: from bare survival at the early ages to advanced livelihood in modern society. Thus, the interaction, which is mostly negative to the environment, between \textit{Homo sapiens} and nature began in their existence: throughout the history of humans, as a form of exploitation. The forms of exploitation from human varies between types of civilizations. Farming civilization uses the land, which could be deforested, and labour forces from animals. Nomadic civilization is also an obvious "use" of nature. That is, human has been creating a negative impact on nature. Before \IR, however, the equilibrium in many places is not broken yet, and thus the \EC did not appear. In another word, the current \EC is a problem of \textit{Homo sapiens}, and its greedy nature, although the capital amplifies and accelerated this effect. However, it is hard to distinguish between Farming-Livestock Civilization Capitalism and modern capitalism.
 \\
 
-Cap did, but human
+% Cap did, but human
 
-In conclusion, I do agree with Moore's argument that the capital created the current \EC. However, I cannot accept the fact that he ignored the importance of technology. I furthur argued that his disconnection of human natural and capitalism is not acceptable, as human is always greedy and this is the basic mechanism of capitalism. That is, although capitalism might seem to be the problem, human natural is what made it possible. I then came up with the conclusion that human is the root cause of the current \EC and capitalism immediate cause, as it expose the weakness of human natural.
+In conclusion, I do agree with Moore's argument that the capital created the current \EC. However, I cannot accept the fact that he ignored the importance of technology, or humans with means, in his argument. I used two models to explain the connection between political systems and humans, arguing that a political system can only make decisions when the human virtual force has a small angle with the capital virtual force and only when technologies made the decisions possible. I further argued that his disconnection of human nature and capitalism is not acceptable, as a human is always greedy and this is the basic mechanism of capitalism. That is, although capitalism might seem to be the problem, human nature is what made it possible. I then concluded that human is the root cause of the current \EC and capitalism's immediate cause, as it exposes the weakness of human nature.
 \newpage
 
 
