Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -83,8 +83,8 @@ Modern capitalism did enhance \EC, this is very obvious in history. I also agree
 The history development process could be seen as the results of virtual forces, which are different components in the decision tree, including the policy (capitalism decisions) and technology (human capability). The direction and magnitude of the process are based on the resultant of the vectors at this moment. The smaller the angle between the policy and technology, the faster the move is; when this angle is small, we can consider the technology contributed to the political decisions, and vice versa: when the angle is large, technology and the political decision limit each other.  At the beginning of \IR, the first situation is the case. However, nowadays, the second situation is more dominant in modern society. A thing to notice is that if we imagine the history space with other dimensions as the welfare in different interest groups of the moment, the capital decision will most likely be the scalar multiplication of the gradient of the welfare dimension with the greatest scalar value of the projection value by the capital interest vector. That is, the capital will choose the best decision for them and only for them in the shortest time frame, which could lead to the local optimum in the metric space with a time dimension, avoiding the global optimum.  
 That aligns with Moore's argument. However, he underlooked the force of humans.
 The human/technology vector is independent of this, and the limitation effect (the second situation is the composition of forces process) of technology could play a significant role and limit the political decision. 
-%---------------
-The second way to model the history process is that politics (capitalism) points the direction, but technology (humans) creates the path. Without the path created by humans, capital could have two solutions: to create the technology (means) needed by the direction or choose another direction, usually the second-best option. From this model, we can observe that the human (technology) is the limiting decision component during history.
+
+The second way to model the history process is that politics (capitalism) points the direction, but technology (humans) creates the path. Without the path created by humans, capital could have two solutions: to create the technology (means) needed by the direction or choose another direction, usually the second-best option. From this model, we can observe that the human (technology) is the limiting decision component during history. That is, political systems and decisions created the positive options in the system (what "we" want to do), while humans and technology created the negative options (what "we" cannot do).
 
 % $$F_{history}(cor)=\sqrt{\sum_{i\in F(cor)}i^2}$$
 His argument also disacknowledges the process toward \EC already began before the  so-called modern capitalism.
@@ -94,7 +94,7 @@ Like almost all species, \textit{Homo sapiens} is greedy: from bare survival at 
 
 % Cap did, but human
 
-In conclusion, I do agree with Moore's argument that the capital created the current \EC. However, I cannot accept the fact that he ignored the importance of technology, or humans with means, in his argument. I used two models to explain the connection between political systems and humans, arguing that a political system can only make decisions when the human virtual force has a small angle with the capital virtual force and only when technologies made the decisions possible. I further argued that his disconnection of human nature and capitalism is not acceptable, as a human is always greedy and this is the basic mechanism of capitalism. That is, although capitalism might seem to be the problem, human nature is what made it possible. I then concluded that human is the root cause of the current \EC and capitalism's immediate cause, as it exposes the weakness of human nature.
+In conclusion, I do agree with Moore's argument that the capital created the current \EC. However, I cannot accept the fact that he ignored the importance of technology, or humans with means, in his argument. I used two models to explain the connection between political systems and humans, arguing that a political system can only make decisions when the human virtual force has a small angle with the capital virtual force and only when technologies made the decisions possible. I further argued that his disconnection of human nature and capitalism is not acceptable, as a human is always greedy and this is the basic mechanism of capitalism. That is, although capitalism might seem to be the problem, human nature is what made it possible. I then concluded that human is the root cause of the current \EC and capitalism's immediate cause, as it exposes the weakness of human nature. 
 \newpage
 
 
